[workspace]
resolver = "3"
members = [
    "libs/time_it",
    "apps/time_it_test",
    "libs/print_msg",
    "apps/print_note_test",
    "apps/print_inspect_test",
    #{member_tag}
]

[workspace.package]
# global version - you can override this in underlying crates
version = "0.1.0"
# default edition - you should not override this in underlying crates
edition = "2024"

[workspace.dependencies]
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1.0"
# color-eyre = "0.6"
# rand = "0.10.0"

time_it = { path = "libs/time_it" }
time_it_test = { path = "apps/time_it_test" }
print_msg = { path = "libs/print_msg" }
print_note_test = { path = "apps/print_note_test" }
print_inspect_test = { path = "apps/print_inspect_test" }
#{depend_tag}