[workspace]
resolver = "3"
members = [
    "libs/time_it",
    "libs/print_msg",
    "libs/ut",
    #{member_tag}
]

[workspace.package]
# global version - you can override this in underlying crates
version = "0.1.0"
# default edition - you should not override this in underlying crates
edition = "2024"

[workspace.dependencies]
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1.0"
# color-eyre = "0.6"
# rand = "0.10.0"

time_it = { path = "libs/time_it" }
ut = { path = "libs/ut" }
#{depend_tag}