[workspace]
resolver = "3"
members = [
    "libs/ut",
    #{member_tag}
]

[workspace.package]
# global version - you can override this in underlying crates
version = "0.1.0"
# default edition - you should not override this in underlying crates
edition = "2024"

[workspace.dependencies]
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1.0"
# color-eyre = "0.6"
# rand = "0.10.0"

ut = { path = "libs/ut" }
#{depend_tag}