[package]
name = "print_inspect_test"
version.workspace = true
edition.workspace = true

[dependencies]
# tokio = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }
# color-eyre = { workspace = true }
# rand = { workspace = true }

print_msg = { workspace = true }
# time_it = { workspace = true }