[package]
name = "time_it_test"
version.workspace = true
edition.workspace = true

[features]
default = []
print_time = ["time_it/enable_timing"]

[dependencies]
# tokio = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }
# color-eyre = { workspace = true }
# rand = { workspace = true }

debug = { workspace = true }
time_it = { workspace = true}