[package]
name = "print_msg"
version.workspace = true
edition.workspace = true

[features]
default = []
enable_note = []
disable_note = []

[dependencies]
# tokio = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }
# color-eyre = { workspace = true }
# rand = { workspace = true }
