[package]
name = "time_it"
version = "1.0.0"
edition.workspace = true

[features]
default = []
enable_timing = []
disable_timing = []

[dependencies]
# tokio = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }
# color-eyre = { workspace = true }
# rand = { workspace = true }
