[package]
name = "ut"
version.workspace = true
edition.workspace = true

[features]
default = []

ut_on = ["view_on", "note_on", "time_on"]
ut_off = ["view_off", "note_off", "time_off"]

view_on = []
view_off = []

note_on = []
note_off = []

time_on = []
time_off = []

[dependencies]
# tokio = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }
# color-eyre = { workspace = true }
# rand = { workspace = true }
