[package]
name = "ut"
version = "0.2.0"
edition.workspace = true

[features]
default = []

ut_on = ["view_on", "note_on", "time_on", "out_on"]
ut_off = ["view_off", "note_off", "time_off", "out_off"]

dbg_on = ["view_on", "note_on", "time_on"]
dbg_off = ["view_off", "note_off", "time_off"]

view_on = []
view_off = []

note_on = []
note_off = []

time_on = []
time_off = []

out_on = []
out_off = []

[dependencies]
